# airavat_1.0_hw_ros2

./: README.md
Documentation/: README.md
Documentation/Motor1_PIDTuning/: FF_motor_data_20251222_132301.csv  FF_motor_data_20251222_132642.csv  FF_pwm_rpm_average.csv  motor1_FF_BestFitLine.txt
src/GroundStation-Laptop/airavat_bringup/: CMakeLists.txt  package.xml
src/GroundStation-Laptop/airavat_bringup/launch/: core.launch.py  nav2.launch.py  slam.launch.py
src/GroundStation-Laptop/airavat_description/: CMakeLists.txt  package.xml
src/GroundStation-Laptop/airavat_description/launch/: display.launch.py
src/GroundStation-Laptop/airavat_description/rviz/: rviz_config.rviz
src/GroundStation-Laptop/airavat_description/urdf/: imu.xacro  lidar.xacro  my_airavat_1.0_base.xacro  my_airavat_1.0_compiled.urdf.xacro
src/GroundStation-Laptop/airavat_nav2/: package.xml
src/GroundStation-Laptop/airavat_nav2/config/: amcl_config.yaml  nav2_params.yaml  nav2_params.yaml.bkp
src/GroundStation-Laptop/airavat_nav2/launch/: amcl.launch.py  navigation.launch.py
src/GroundStation-Laptop/airavat_nav2/maps/: my_map_nav2test.pgm  my_map_nav2test.yaml
src/GroundStation-Laptop/airavat_slam/: CMakeLists.txt  package.xml
src/GroundStation-Laptop/airavat_slam/config/: mapper_params_online_async.yaml
src/GroundStation-Laptop/airavat_slam/launch/: airavat_slam.launch.py
src/GroundStation-Laptop/ekf_node/: CMakeLists.txt  package.xml
src/Rover-RPI/imu_publisher/: package.xml  setup.py
src/Rover-RPI/wheel_interface/: package.xml  setup.cfg  setup.py
(+4 files in other folders)
