<?xml version="1.0"?>
<package format="3">
  <name>airavat_bringup</name>
  <version>0.0.0</version>
  <description>Bringup launch package for airavat autonomous rover</description>

  <maintainer email="harshvardhan.shah43@gmail.com">Harshvardhan Shah</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Packages you include in launch files -->
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>airavat_description</exec_depend>
  <exec_depend>airavat_slam</exec_depend>
  <exec_depend>wheel_interface</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
